CELDEV-1170 - QueryMode.TOKENIZED_OR (#22)